tests/e2e/unary_complex_6b.error
Error: syntax error in story at line 1, column 12

1|    a = !-2 or ! -3 - -4
                 ^

E0103: `boolean` is not compatible with `int`
